Some small bugs but otherwise ready to submit. Prompt for user name stuck in infinite loop if user decides to cancel, and page does not synamically re-render.

--- a/capstone-style.css
+++ b/capstone-style.css
@@ -1,4 +1,7 @@
-
+body { 
+    background-color: antiquewhite;
+    font-family: 'Courier New', Courier, monospace;
+}
 .homePage {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
@@ -19,7 +22,13 @@
     font-weight: bold;
     background-color:antiquewhite;
     border-radius: 20px;
+    
+}
 
+.homePage button:hover { 
+    background-color: #B99470;
+    color:antiquewhite;
+    cursor: pointer;
 }
     
 .welcome { 
@@ -27,10 +36,15 @@
     display: flex; 
     align-items: center; 
     justify-content: center;
-    color: antiquewhite;
-    font-size: 25px;
-    text-shadow: 3px 3px 3px #0e0808;
-}
+
+    color:antiquewhite; 
+    font-size: 25px; 
+    text-shadow: -1px 1px 0 #000, 
+                  2px 2px 0 #000, 
+                 1px -1px 0 #000, 
+                -1px -1px 0 #000; 
+} 
+
 .check { 
     grid-area: 2 / 2 / 7 / 5; 
     height: 520px;
@@ -44,4 +58,64 @@
     display: flex;
     align-items: center; 
     justify-content: center;
+}
+
+.actionPage {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+.actionPage button { 
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 15px;  
+    font-weight: bold;
+    background-color: #B99470;
+    border-radius: 5px;
+}
+
+.actionPage button:hover {
+    background-color: antiquewhite;
+    cursor: pointer;
+
+}
+  
+.actionHead { 
+    grid-area: 1 / 1 / 2 / 6; 
+    text-align: center;
+}
+.bookList { 
+    grid-area: 2 / 1 / 5 / 6; 
+    display: flex; 
+    justify-content: center;
+}
+.bookList table, th, td{ 
+    width: 75%;
+    padding: 10px; 
+    font-size: 20px;
+}
+
+.bookList table { 
+    background-color: #B99470;
+    box-shadow: 3px 3px 10px #0e0808;
+}
+
+.bookList tr { 
+    background-color: antiquewhite;
+}
+
+
+.goBack { 
+    grid-area: 5 / 1 / 6 / 6; 
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    margin: 25px;
+}
+
+.goBack button { 
+    align-self: start;
+    padding: 10px 15px;
 }
